--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* @import '~antd/dist/antd.css'; */
+/* 
 .App {
   text-align: center;
 }
@@ -21,7 +23,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
